--- a/main_project/index.html
+++ b/main_project/index.html
@@ -36,7 +36,7 @@
 		<!-- ABOUT US -->
 		<section class="about-us section-wrapper" id="about-us">
 			<i class="fa fa-book" aria-hidden="true"></i>
-			<h1 class="section-title">Who I am</h1>
+			<h1 class="section-title">Who We are</h1>
 			<h2 class="section-subtitle">Tell the world about yourself</h2>
 			<p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc, fiant sollemnes in futurum.</p>
 			<a class="button">Read more about us</a>
@@ -44,7 +44,7 @@
 		<!-- PORTFOLIO -->
 		<section class="portfolio" id="portfolio">
 			<i class="fa fa-picture-o" aria-hidden="true"></i>
-			<h1 class="section-title">What I do</h1>
+			<h1 class="section-title">What We do</h1>
 			<h2 class="section-subtitle">Show your amazing work</h2>
 			<ul>
 				<li class="portfolio-gallery-item">
@@ -92,7 +92,7 @@
 		<!-- TEAM -->
 		<section class="skills section-wrapper" id="skills">
 			<i class="fa fa-wrench" aria-hidden="true"></i>
-			<h1 class="section-title">What I can</h1>
+			<h1 class="section-title">What We can</h1>
 			<h2 class="section-subtitle">The amazing people behind this</h2>
 			<p>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.<br> Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
 			<ul>
@@ -142,21 +142,21 @@
 		<!-- CONTACT-US -->
 		<section class="contact-us section-wrapper" id="contact">
 			<i class="fa fa-map-marker" aria-hidden="true"></i>
-			<h1 class="section-title">Contact me</h1>
-			<h2 class="section-subtitle">Work with me</h2>
+			<h1 class="section-title">Contact us</h1>
+			<h2 class="section-subtitle">We work for you</h2>
 			<div class="contact-box">
 				<div id="map">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2564.906695542074!2d36.24194756445934!3d49.99435873696931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a09f63ab0f8b%3A0x2d4c18681aa4be0a!2z0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sua!4v1472310686074" width="100%" height="296" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1213.6688279683142!2d13.405441162210797!3d52.527324746383435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e373f035901%3A0x42120465b5e3b70!2z0JHQtdGA0LvQuNC9!5e0!3m2!1sru!2sde!4v1491411382394" width="100%" height="296" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 				<ul class="contact-list">
 					<li>
 						<p class="section-title contact">Location</p>
-						<p>198 West 21th Street, <br> New York, NY 10010</p>
+						<p>Köpenickerstrasse, <br> 10997 Berlin</p>
 					</li>
 					<li>
 						<p class="section-title contact">Phone</p>
-						<p>+88 (0) 101 0000000</p>
-						<p>+88 (0) 101 0000000</p>
+						<p>+49 (0) 101 0000000</p>
+						<p>+49 (0) 101 0000000</p>
 					</li>
 					<li>
 						<p class="section-title contact">Email</p>
